--- a/campus-backend/package.json
+++ b/campus-backend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
+    "postinstall": "npx strapi --version",
     "build": "strapi build",
     "deploy": "strapi deploy",
     "develop": "strapi develop",
